--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">FlyFi</string>
+    <string name="app_name">SpeedTest</string>
     <string name="todo">TODO</string>
 
 
